# Metabrain

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  embedding.rs  ingest.rs  main.rs  outline.rs  parser.rs  rag.rs  vector.rs  watcher.rs
src-tauri/src/llm/: mod.rs  ollama.rs
src/api/: tauri.ts
src/pages/: Chat.tsx  Settings.tsx  index.ts
src/queries/: chat.ts  index.ts  settings.ts  sync.ts
src/stores/: chatStore.ts  index.ts  settingsStore.ts  syncStore.ts
src/types/: index.ts
